// Compile this file using:
// protoc --python_out=. face-status.proto
syntax = "proto2";
package ndn_message;

// Protobuf has no "outer" message type, so we need to put the TLV FaceStatus
// message inside an outer "typeless" FaceStatusMessage.
message FaceStatusMessage {
  message FaceStatus {
    optional uint64 face_id = 105;
    optional string uri = 114;
    optional string local_uri = 129;
    optional uint64 expiration_period = 109;
    optional uint64 face_scope = 132;
    optional uint64 face_persistency = 133;
    optional uint64 link_type = 134;
    optional uint64 base_congestion_marking_interval = 135;
    optional uint64 default_congestion_threshold = 136;
	optional uint64 mtu = 137;
    optional uint64 n_in_interests = 144;
    optional uint64 n_in_datas = 145;
    optional uint64 n_in_nacks = 151;
    optional uint64 n_out_interests = 146;
    optional uint64 n_out_datas = 147;
    optional uint64 n_out_nacks = 152;
    optional uint64 n_in_bytes = 148;
    optional uint64 n_out_bytes = 149;
  }

  // A FaceStatusMessage has repeated FaceStatus.
  repeated FaceStatus face_status = 128;
}
